<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="#F1F7FF"
    app:cardElevation="0dp"
    app:strokeColor="@color/primary_light"
    app:strokeWidth="0.5dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp">
        <TextView
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_more"
            android:textSize="16sp"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="12dp"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="24.03.2025"
            android:textSize="12sp"
            android:textColor="@color/primary_light"/>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv_date"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_was_presented"
                android:textSize="16sp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star"
                android:layout_marginStart="8dp"/>
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0.0"
                android:textSize="16sp"
                android:textColor="@color/primary_color"
                android:layout_marginStart="4dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_score"
                android:textSize="16sp"
                android:textColor="@color/primary_color"
                android:layout_marginStart="8dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/primary_light"
            android:layout_below="@id/ll"
            android:layout_marginTop="8dp"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>