<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/screen_color">



<!--    <TextView-->
<!--        android:id="@+id/btn_back"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/txt_previous"-->
<!--        android:textSize="16sp"-->
<!--        android:padding="12dp"-->
<!--        android:layout_marginStart="4dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:textColor="@color/primary_light"/>-->

    <TextView
        android:id="@+id/txt_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_my_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"/>

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="60dp"
            android:elevation="0dp"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/profile_image_1"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/select_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_photo"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_user_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Rahmatov Sanjarbek"
        android:layout_below="@id/rl_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_user_info"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:strokeColor="@color/primary_color"
        app:strokeWidth="1dp"
        android:layout_below="@id/tv_user_full_name">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/ll_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="F.I:"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/txt_age"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/txt_address"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/txt_all_score"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Sanjarbek Rahmatov" />

                    <TextView
                        android:id="@+id/tv_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="21 yosh" />

                    <TextView
                        android:id="@+id/tv_user_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Qashqadaryo viloyati shahrisabz tuman duxchi mfy"
                        android:maxLines="1"/>

                    <TextView
                        android:id="@+id/tv_all_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="0.0" />
                </LinearLayout>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_language"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="16dp"
        android:text="@string/txt_select_language"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/ic_language"
        app:iconGravity="textEnd"
        android:layout_below="@id/card_user_info"
        android:layout_marginTop="16dp"
        app:iconSize="22dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_them"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="16dp"
        android:text="@string/txt_app_them"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/ic_night"
        app:iconGravity="textEnd"
        android:layout_below="@id/btn_select_language"
        android:layout_marginTop="16dp"
        app:iconSize="22dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_app_info"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:cornerRadius="16dp"
        android:text="@string/txt_app_info"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/ic_info"
        app:iconGravity="textEnd"
        android:layout_below="@id/btn_select_them"
        android:layout_marginTop="16dp"
        app:iconSize="22dp"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_uot"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/color_red"
        app:cornerRadius="16dp"
        android:text="@string/txt_log_out"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/ic_log_out"
        app:iconGravity="textEnd"
        app:iconSize="22dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"/>
</RelativeLayout>