<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.sign_in.SignInFragment"
    android:background="@color/screen_color">

    <TextView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_previous"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/primary_light"/>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/btn_back"
        android:layout_above="@id/btn_sign_in"
        android:layout_marginBottom="24dp"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sign_in"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:layout_marginStart="16dp"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_user_id"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:strokeWidth="0.5dp"
                app:strokeColor="@color/primary_light">
                <EditText
                    android:id="@+id/et_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:hint="@string/txt_email"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_user_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:strokeWidth="0.5dp"
                app:strokeColor="@color/primary_light">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="8dp"
                    android:weightSum="1">
                    <EditText
                        android:id="@+id/et_user_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/txt_user_password"
                        android:layout_weight="0.9"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="textPassword"/>
                    <ImageView
                        android:id="@+id/btn_show_hide_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:src="@drawable/ic_hide_password"
                        android:padding="6dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:cornerRadius="16dp"
        android:text="@string/txt_sign_in"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:enabled="false"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>