<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_refresh"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/screen_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/toolbar_shape"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_to_profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="40dp"
                    app:cardElevation="0dp">
                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/profile_image_1"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_hello"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/txt_user_name"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:layout_marginEnd="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"/>
                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0.0"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_score"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/toolbar"
            android:layout_alignParentBottom="true">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginHorizontal="16dp"
                android:visibility="gone"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:lottie_rawRes="@raw/empty"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>



</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>